--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<a href="#" class="icon solid fa-home"><span>Home</span></a>
-			<a href="#information" class="fas fa-exclamation"><span>information</span></a>
+			<a href="#info" class="icon solid fa-exclamation"><span>Info</span></a>
 			<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 			<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 
@@ -33,13 +33,13 @@
 					<h1>王承皓</h1>
 					<p>Product Manager</p>
 				</header>
-				<a href="#information" class="jumplink pic">
-					<span class="arrow icon solid fa-chevron-right"><span>information</span></span>
+				<a href="#info" class="jumplink pic">
+					<span class="arrow icon solid fa-chevron-right"><span>Info</span></span>
 					<img src="images/me.jpg" alt="" />
 				</a>
 			</article>
 			<!-- information -->
-			<article id="information" class="panel">
+			<article id="info" class="panel">
 				<header>
 					<h2>Info</h2>
 				</header>
@@ -61,23 +61,23 @@
 					<div class="row">
 						<ul class="timeline">
 							<li>
-								<p class="timeline-date">2007年2月</p>
+								<p class="timeline-date">Now</p>
 								<div class="timeline-content">
-									<h3>カナダでワーキングホリデー</h3>
+									<h3>Triple-i</h3>
 									<p>ワーホリビザで渡加。アクセサリーショップ等でバイト。カナダ生活を満喫。</p>
 								</div>
 							</li>
 							<li>
-								<p class="timeline-date">2008年3月</p>
+								<p class="timeline-date">2018/11</p>
 								<div class="timeline-content">
-									<h3>Webの専門学校に入学</h3>
+									<h3>Speed Drifters</h3>
 									<p>有給インターンシップ付きの一年プログラムを受講。HTML、CSS、JavaScript、PHP等のコーディングやWebデザインの基礎を学ぶ。</p>
 								</div>
 							</li>
 							<li>
-								<p class="timeline-date">2009年2月</p>
+								<p class="timeline-date">2018/02</p>
 								<div class="timeline-content">
-									<h3>バンクーバーのWeb制作会社でWebデザイナーとして働く</h3>
+									<h3>Gash</h3>
 									<p>私以外全員カナダ人という環境で英語やWebの技術を学びながら必死に働く</p>
 								</div>
 							</li>
