--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</header>
 				<a href="#info" class="jumplink pic">
 					<span class="arrow icon solid fa-chevron-right"><span>Info</span></span>
-					<img src="images/me.jpg" alt="" />
+					<img src="images/abao.jpg" alt="" />
 				</a>
 			</article>
 			<!-- information -->
@@ -64,21 +64,21 @@
 								<p class="timeline-date">Now</p>
 								<div class="timeline-content">
 									<h3>Triple-i</h3>
-									<p>ワーホリビザで渡加。アクセサリーショップ等でバイト。カナダ生活を満喫。</p>
+									<p>將科技帶入保險產，提供更好的溝通平台。將理財帶入生活，提供更簡單的計算工具。</p>
 								</div>
 							</li>
 							<li>
 								<p class="timeline-date">2018/11</p>
 								<div class="timeline-content">
 									<h3>Speed Drifters</h3>
-									<p>有給インターンシップ付きの一年プログラムを受講。HTML、CSS、JavaScript、PHP等のコーディングやWebデザインの基礎を学ぶ。</p>
+									<p>2019年度最佳遊戲。是一款簡單上手、操作手感絕佳的賽車遊戲，不但開啟了台灣的賽車遊戲市場，至今依然活耀於排行榜。</p>
 								</div>
 							</li>
 							<li>
 								<p class="timeline-date">2018/02</p>
 								<div class="timeline-content">
 									<h3>Gash</h3>
-									<p>私以外全員カナダ人という環境で英語やWebの技術を学びながら必死に働く</p>
+									<p>台港首選數位娛樂服務平台，提供網路金流、線上遊戲資訊。</p>
 								</div>
 							</li>
 						</ul>
@@ -138,6 +138,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/function.js"></script>
 	
 </body>
 
