--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 	})(window,document,'script','dataLayer','GTM-NZDMPDC');</script>
 	<!-- End Google Tag Manager -->
 
+	<!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4RG7W1QWRY"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4RG7W1QWRY');
+    </script>
 
 
 
@@ -37,7 +46,7 @@
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 
-	
+
 	<!-- Wrapper-->
 	<div id="wrapper">
 
