--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								<input type="text" name="phone" placeholder="Phone" required />
 							</div>	
 							<div class="col-12">
-								<input type="text" name="email" placeholder="Email" required />
+								<input type="email" name="email" placeholder="Email" required />
 							</div>
 							<div class="col-12">
 								<input type="text" name="subject" placeholder="Subject" required />
