--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
 			<ul class="copyright">
 				<li>&copy; 2022.</li>
 				<li>Design : ABAO</li>
+				&ensp;
+				<a href="https://www.facebook.com/wang.c.hao.9"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/aboao.w/"><i class="fa-brands fa-instagram"></i></a>
+				<a href="https://line.me/ti/p/5wklUV2_GE"><i class="fa-brands fa-line"></i></a>
 			</ul>
 		</div>
 
@@ -178,6 +182,7 @@
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/function.js"></script>
+	<script src="https://kit.fontawesome.com/b2a6aba1cf.js" crossorigin="anonymous"></script>
 	
 </body>
 
