--- a/index.html
+++ b/index.html
@@ -82,6 +82,24 @@
 				<header>
 					<h2>Info</h2>
 				</header>
+				<h3>Who am I  </h3>
+					
+				<p>
+                姓名 : 王承皓<br>
+                Name : Wang Chan Hao<br>
+				綽號 : 阿寶<br>
+				AKA  : ABAO
+				</p>
+
+				<h3>Base Data </h3>
+
+				<p>
+				生日 : 1994.11.02<br>
+				性別 : 男<br>
+				興趣 : 推理、解謎<br>
+				技能 : 企劃、專案管理
+				</p>
+
 				<p>
 					來自台灣的經理人，專注於增強自己在各種領域的技能。<br>
 					他每天都會提醒自己「保持叛逆，特立獨行」<br>
