--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta property="description" content="來自台灣的經理人，專注於增強自己在各種領域的技能。他每天都會提醒自己「保持叛逆，特立獨行」" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="canonical" href="https://ABOAO.github.io/My-Page/">
 
     <!--OG 標籤-->
 	<meta property="og:url" content="https://ABOAO.github.io/My-Page/" />
@@ -15,6 +16,7 @@
 	<meta property="og:description" content="來自台灣的經理人，專注於增強自己在各種領域的技能。他每天都會提醒自己「保持叛逆，特立獨行」" />
 	<meta property="og:image" content="images/王承皓.jpg" />
 
+	<!--CSS 連結-->
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
@@ -52,7 +54,6 @@
 
 	<!-- Wrapper-->
 	<div id="wrapper">
-
 
 		<!-- Nav -->
 		<nav id="nav">
