減少圖片大小

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="王承皓" />
 	<meta property="og:description" content="來自台灣的經理人，專注於增強自己在各種領域的技能。他每天都會提醒自己「保持叛逆，特立獨行」" />
-	<meta property="og:image" content="images/王承皓.jpg" />
+	<meta property="og:image" content="images/王承皓.avif" />
 
 	<!--CSS 連結-->
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -75,7 +75,7 @@
 				</header>
 				<a href="#info" class="jumplink pic">
 					<span class="arrow icon solid fa-chevron-right"><span>Info</span></span>
-					<img src="images/王承皓.jpg" alt="王承皓" />
+					<img src="images/王承皓.avif" alt="王承皓" />
 				</a>
 			</article>
 			<!-- information -->
