--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 
 <head>
 
-  <!--標籤-->
-  <title>王承皓</title>
-  <meta property="description" content="來自台灣的經理人，專注於增強自己在各種領域的技能。他每天都會提醒自己「保持叛逆，特立獨行」" />
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link rel="canonical" href="https://ABOAO.github.io/My-Page/">
+	<!--標籤-->
+	<title>王承皓</title>
+	<meta property="description" content="來自台灣的經理人，專注於增強自己在各種領域的技能。他每天都會提醒自己「保持叛逆，特立獨行」" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="canonical" href="https://ABOAO.github.io/My-Page/">
 
-    <!--OG 標籤-->
+	<!--OG 標籤-->
 	<meta property="og:url" content="https://ABOAO.github.io/My-Page/" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="王承皓" />
@@ -22,23 +22,26 @@
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
 
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-NZDMPDC');</script>
+	<!-- Google Tag Manager -->
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-NZDMPDC');</script>
 	<!-- End Google Tag Manager -->
 
 	<!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4RG7W1QWRY"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4RG7W1QWRY"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-    gtag('config', 'G-4RG7W1QWRY');
-    </script>
+		gtag('config', 'G-4RG7W1QWRY');
+	</script>
 
 
 
@@ -46,14 +49,20 @@
 
 <body class="is-preload">
 
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZDMPDC"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZDMPDC" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
+
+	<!--logo-->
 
 
 	<!-- Wrapper-->
 	<div id="wrapper">
+
+		<div id="logo">
+			<img src="images/LOGO.svg" height="40" alt="用阿寶的日文跟中文設計出來的LOGO">
+		</div>
 
 		<!-- Nav -->
 		<nav id="nav">
@@ -61,7 +70,7 @@
 			<a href="#info" class="icon solid fa-exclamation"><span>Info</span></a>
 			<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 			<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-			
+
 		</nav>
 
 		<!-- Main -->
@@ -83,22 +92,22 @@
 				<header>
 					<h2>Info</h2>
 				</header>
-				<h3>Who am I  </h3>
-					
+				<h3>Who am I </h3>
+
 				<p>
-                姓名 : 王承皓<br>
-                Name : Wang Chan Hao<br>
-				綽號 : 阿寶<br>
-				AKA  : ABAO
+					姓名 : 王承皓<br>
+					Name : Wang Chan Hao<br>
+					綽號 : 阿寶<br>
+					AKA : ABAO
 				</p>
 
 				<h3>Base Data </h3>
 
 				<p>
-				生日 : 1994.11.02<br>
-				性別 : 男<br>
-				興趣 : 推理、解謎<br>
-				技能 : 企劃、專案管理
+					生日 : 1994.11.02<br>
+					性別 : 男<br>
+					興趣 : 推理、解謎<br>
+					技能 : 企劃、專案管理
 				</p>
 
 				<p>
@@ -149,18 +158,19 @@
 				<header>
 					<h2>Contact Me</h2>
 				</header>
-				<iframe name="hidden_iframe" id="hidden_iframe" style="display: none;" 
-				     onload="this.onload=function(){window.location='https://ABOAO.github.io/My-Page/'}"></iframe>
-				<form action="https://script.google.com/macros/s/AKfycbxAT-oORea_UjGS7sYZOyjdmZ3dY-GFvJMaN1BERo0qdDHtXUNnXSiCn4cS6f_iBbIVRg/exec" 
-				     method="post" onsubmit ="checkUser()" target="hidden_iframe">
+				<iframe name="hidden_iframe" id="hidden_iframe" style="display: none;"
+					onload="this.onload=function(){window.location='https://ABOAO.github.io/My-Page/'}"></iframe>
+				<form
+					action="https://script.google.com/macros/s/AKfycbxAT-oORea_UjGS7sYZOyjdmZ3dY-GFvJMaN1BERo0qdDHtXUNnXSiCn4cS6f_iBbIVRg/exec"
+					method="post" onsubmit="checkUser()" target="hidden_iframe">
 					<div>
 						<div class="row">
 							<div class="col-6 col-12-medium">
-								<input  type="text" name="name" placeholder="Name" required />
+								<input type="text" name="name" placeholder="Name" required />
 							</div>
 							<div class="col-6 col-12-medium">
 								<input type="text" name="phone" placeholder="Phone" required />
-							</div>	
+							</div>
 							<div class="col-12">
 								<input type="email" name="email" placeholder="Email" required />
 							</div>
@@ -187,7 +197,7 @@
 				<li>Design : ABAO</li>
 				&ensp;
 				<a href="https://www.facebook.com/wang.c.hao.9"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/aboao.w/"><i class="fa-brands fa-instagram"></i></a>
+				<a href="https://www.instagram.com/aboao.w/"><i class="fa-brands fa-instagram"></i></a>
 				<a href="https://line.me/ti/p/5wklUV2_GE"><i class="fa-brands fa-line"></i></a>
 			</ul>
 		</div>
@@ -202,7 +212,7 @@
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/function.js"></script>
 	<script src="https://kit.fontawesome.com/b2a6aba1cf.js" crossorigin="anonymous"></script>
-	
+
 </body>
 
 </html>
