--- a/index.html
+++ b/index.html
@@ -201,8 +201,13 @@
 				<a href="https://www.instagram.com/aboao.w/"><i class="fa-brands fa-instagram"></i></a>
 				<a href="https://line.me/ti/p/5wklUV2_GE"><i class="fa-brands fa-line"></i></a>
 			</ul>
-		</div>
 
+		    <!--Footer image
+			<div id="side"> 
+			<img src="images/Footer image.svg"  alt="尺規造型設計">
+		    </div>-->
+		</div>
+        
 	</div>
 
 	<!-- Scripts -->
